--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,11 @@ nav a:hover{
 }
 
 /* Styles for the Sections in the Main */
+
+main{
+    padding-top: 2rem;
+}
+
 main > section{
     padding: 1rem 0;
 }
