--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,29 @@ h2, h3{
     text-align: center;
     margin: 1.5rem 0 1rem 0;
 }
+h1{
+    font-size: 2.2rem;
+    font-weight: bold;
+    text-align: center;
+    color: var(--dk-gray);
+    margin: 1.5rem 0 1rem 0;
+}
+
+h2{
+    font-size: 1.75rem;
+    font-weight: bold;
+    text-align: center;
+    color: var(--dk-gray);
+    margin: 1.5rem 0 1rem 0;
+}
+
+h3{
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-align: center;
+    color: var(--dk-gray);
+    margin: 1rem 0;
+}
 
 /* Paragraph Styles */
 p{
